<resources>
    <string name="app_name">Star Wars API</string>
    <string name="director">Director:</string>
    <string name="producer">Producer:</string>
    <string name="gender">Gender:</string>
    <string name="birth_year">Birth year:</string>
    <string name="diameter">Diameter:</string>
    <string name="climate">Climate:</string>
    <string name="gravity">Gravity:</string>
    <string name="terrain">Terrain:</string>
    <string name="population">Population:</string>
    <string name="release_date">Release date:</string>
</resources>