<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="Title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/director"/>

            <TextView
                android:id="@+id/tv_director"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:gravity="center"
                android:layout_height="wrap_content"
                tools:text="Director"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/producer"/>

            <TextView
                android:id="@+id/tv_producer"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:gravity="center"
                android:layout_height="wrap_content"
                tools:text="Producer"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textStyle="italic"
                android:textColor="@color/red"
                android:text="@string/release_date"/>

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/red"
                tools:text="Release date"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>